@@ -30,19 +30,21 @@ package com.runtimeverification.rvpredict.trace;
 
 import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.List;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import com.google.common.collect.*;
-import com.runtimeverification.rvpredict.config.Configuration;
+import com.runtimeverification.rvpredict.log.Event;
+import com.runtimeverification.rvpredict.log.EventType;
 import com.runtimeverification.rvpredict.metadata.Metadata;
-import com.runtimeverification.rvpredict.util.Constants;
 
 /**
  * Representation of the execution trace. Each event is created as a node with a
@@ -51,128 +53,82 @@ import com.runtimeverification.rvpredict.util.Constants;
  */
 public class Trace {
 
-    private final int capacity;
+    private final int numOfEvents;
+
+    private final long baseGID;
+
+    private final Event[] events;
 
     /**
-     * Unprocessed raw events reading from the logging phase.
+     * Map from thread ID to critical events.
      */
-    private ImmutableList<Event> rawEvents = null;
-    private final ImmutableList.Builder<Event> rawEventsBuilder = ImmutableList.builder();
+    private final Map<Long, List<Event>> tidToEvents = Maps.newHashMap();
 
     /**
-     * Read threads on each address. Only used in filtering thread-local
-     * {@link MemoryAccessEvent}s.
+     * Map from memory addresses to write events ordered by global ID.
      */
-    private final Map<MemoryAddr, Set<Long>> addrToReadThreads = new HashMap<>();
-
-    /**
-     * Write threads on each address. Only used in filtering thread-local
-     * {@link MemoryAccessEvent}s.
-     */
-    private final Map<MemoryAddr, Set<Long>> addrToWriteThreads = new HashMap<>();
-
-    /**
-     * Shared memory locations.
-     */
-    private final Set<MemoryAddr> sharedMemAddr = new HashSet<>();
-
-    private final Set<Long> threadIds = new HashSet<>();
-
-    // fulltrace represents all the critical events in the global order
-    private final List<Event> allEvents = new ArrayList<>();
-
-    /**
-     * Events of each thread.
-     */
-    private final Map<Long, List<Event>> threadIdToEvents = new HashMap<>();
-
-    /**
-     * Start/Join events indexed by the ID of its target thread to join/start.
-     */
-    private final Map<Long, List<SyncEvent>> threadIdToStartJoinEvents = new HashMap<>();
-
-    /**
-     * Wait/Notify/Lock/Unlock events indexed by the involved lock object.
-     */
-    private final Map<Long, List<SyncEvent>> lockIdToSyncEvents = new HashMap<>();
-
-    /**
-     * Read events on each address.
-     */
-    private final Map<MemoryAddr, List<ReadEvent>> addrToReadEvents = new HashMap<>();
-
-    /**
-     * Write events on each address.
-     */
-    private final Map<MemoryAddr, List<WriteEvent>> addrToWriteEvents = new HashMap<>();
+    private final Map<MemoryAddr, List<Event>> addrToWriteEvents = Maps.newHashMap();
 
     /**
      * Lists of {@code MemoryAccessEvent}'s indexed by address and thread ID.
      */
-    private final Table<MemoryAddr, Long, List<MemoryAccessEvent>> memAccessEventsTbl = HashBasedTable.create();
+    private final Table<MemoryAddr, Long, List<Event>> memAccessEventsTbl = HashBasedTable.create();
 
     /**
-     * The initial value at all addresses referenced in this trace segment. It
-     * is computed as the value in the {@link #crntState} before the first
-     * access occurring in this trace segment.
+     * Map from memory addresses referenced in this trace segment to their states.
      */
-    private final Map<MemoryAddr, Long> addrToInitValue = Maps.newHashMap();
+    private final Map<MemoryAddr, MemoryAddrState> addrToState = Maps.newHashMap();
 
     /**
-     * The initial stack trace for all threads referenced in this trace segment.
-     * It is computed as the value in the {@link #crntState} before the first
-     * event of that thread occurring in this trace segment.
+     * The initial states for all threads referenced in this trace segment.
+     * It is computed as the value in the {@link #state} before the first
+     * event of that thread occurs in this trace segment.
      */
-    private final Map<Long, ThreadStatus> threadIdToInitThreadStatus = Maps.newHashMap();
+    private final Map<Long, ThreadState> tidToThreadState = Maps.newHashMap();
 
-    private final Map<SyncEvent, List<String>> initHeldLockToStacktrace;
+    /**
+     * Map from lock ID to critical lock pairs.
+     */
+    private final Map<Long, List<LockRegion>> lockIdToLockRegions = Maps.newHashMap();
 
     /**
      * Set of {@code MemoryAccessEvent}'s that happen during class initialization.
      */
-    private final Set<MemoryAccessEvent> clinitMemAccEvents = Sets.newHashSet();
-
-    /**
-     * Set of outermost LOCK/UNLOCK events.
-     */
-    private final Set<SyncEvent> outermostLockingEvents = Sets.newHashSet();
-
-    /**
-     * Map from thread Id to {@link EventType#INVOKE_METHOD} and
-     * {@link EventType#FINISH_METHOD} events.
-     */
-    private final Map<Long, List<MetaEvent>> threadIdToCallStackEvents = Maps.newHashMap();
-
-    private final Set<MemoryAddr> unsafeMemoryAddresses = Sets.newHashSet();
+    private final Set<Event> clinitEvents = Sets.newHashSet();
 
     private final Metadata metadata;
 
     /**
      * Maintains the current values for every location, as recorded into the trace
      */
-    private final TraceState crntState;
+    private final TraceState state;
 
-    public Trace(TraceState crntState, int capacity) {
-        this.crntState = crntState;
-        this.capacity = capacity;
+    public Trace(TraceState crntState, Event[] events, int numOfEvents) {
+        this.state = crntState;
         this.metadata = crntState.metadata();
-        this.initHeldLockToStacktrace = crntState.getHeldLockStacktraceSnapshot();
+        this.numOfEvents = numOfEvents;
+        this.events = events;
+        this.baseGID = numOfEvents > 0 ? events[0].getGID() : -1;
+        processEvents();
     }
 
     public Metadata metadata() {
         return metadata;
     }
 
-    public int capacity() {
-        return capacity;
+    public long getBaseGID() {
+        return baseGID;
     }
 
-    public boolean hasSharedMemAddr() {
-        return !sharedMemAddr.isEmpty();
+    public int getSize() {
+        return numOfEvents;
     }
 
-    public List<Event> getAllEvents() {
-        return allEvents;
+    public boolean mayContainRaces() {
+        // This method can be further improved to skip an entire window ASAP
+        // For example, if this window contains no race candidate determined
+        // by some static analysis then we can safely skip it
+        return !memAccessEventsTbl.isEmpty();
     }
 
     /**
@@ -182,70 +138,47 @@ public class Trace {
      *            the address
      * @return the initial value
      */
-    public Long getInitValueOf(MemoryAddr addr) {
-        Long initValue = addrToInitValue.get(addr);
-        assert initValue != null : "All values in the trace should have been set in addRawEvent";
-        return initValue;
+    public long getInitValueOf(MemoryAddr addr) {
+        return addrToState.get(addr).initVal;
     }
 
-    public Event getFirstThreadEvent(long threadId) {
-        List<Event> events = getThreadEvents(threadId);
-        return events.isEmpty() ? null : events.get(0);
+    public Event getFirstEvent(long tid) {
+        List<Event> events = tidToEvents.get(tid);
+        return events == null ? null : events.get(0);
     }
 
-    public Event getLastThreadEvent(long threadId) {
-        List<Event> events = getThreadEvents(threadId);
-        return events.isEmpty() ? null : events.get(events.size() - 1);
+    public Event getLastEvent(long tid) {
+        List<Event> events = tidToEvents.get(tid);
+        return events == null ? null : events.get(events.size() - 1);
     }
 
-    public Set<Long> getThreadIds() {
-        return threadIds;
+    public List<Event> getEvents(long tid) {
+        return tidToEvents.getOrDefault(tid, Collections.emptyList());
     }
 
-    public List<Event> getThreadEvents(long threadId) {
-        List<Event> events = threadIdToEvents.get(threadId);
-        return events == null ? Lists.<Event>newArrayList() : events;
+    public Collection<List<Event>> perThreadView() {
+        return tidToEvents.values();
     }
 
-    public Event getNextThreadEvent(Event event) {
-        List<Event> events = getThreadEvents(event.getTID());
-        int nextThrdEventIdx = events.indexOf(event) + 1;
-        assert nextThrdEventIdx > 0;
-        return events.size() == nextThrdEventIdx ? null : events.get(nextThrdEventIdx);
+    public Map<Long, List<LockRegion>> getLockIdToLockRegions() {
+        return lockIdToLockRegions;
     }
 
-    public Map<Long, List<Event>> getThreadIdToEventsMap() {
-        return threadIdToEvents;
+    public List<Event> getWriteEvents(MemoryAddr addr) {
+        return addrToWriteEvents.getOrDefault(addr, Collections.emptyList());
     }
 
-    public Map<Long, List<SyncEvent>> getThreadIdToStartJoinEvents() {
-        return threadIdToStartJoinEvents;
+    public Set<MemoryAddr> getMemoryAddresses() {
+        return memAccessEventsTbl.rowKeySet();
     }
 
-    public Map<Long, List<SyncEvent>> getLockObjToSyncEvents() {
-        return lockIdToSyncEvents;
-    }
-
-    public List<ReadEvent> getReadEventsOn(MemoryAddr addr) {
-        List<ReadEvent> events = addrToReadEvents.get(addr);
-        return events == null ? Lists.<ReadEvent>newArrayList() : events;
-    }
-
-    public List<WriteEvent> getWriteEventsOn(MemoryAddr addr) {
-        List<WriteEvent> events = addrToWriteEvents.get(addr);
-        return events == null ? Lists.<WriteEvent>newArrayList() : events;
-    }
-
-    public Table<MemoryAddr, Long, List<MemoryAccessEvent>> getMemAccessEventsTable() {
+    public Table<MemoryAddr, Long, List<Event>> getMemAccessEventsTable() {
+        // TODO(YilongL): the API of Trace should not expose the memory access events table
         return memAccessEventsTbl;
     }
 
-    public boolean isClinitMemoryAccess(MemoryAccessEvent event) {
-        return clinitMemAccEvents.contains(event);
-    }
-
-    public boolean isUnsafeAddress(MemoryAddr addr) {
-        return unsafeMemoryAddresses.contains(addr);
+    public boolean isInsideClassInitializer(Event event) {
+        return clinitEvents.contains(event);
     }
 
     /**
@@ -254,359 +187,269 @@ public class Trace {
      *
      * @param event
      *            the event
-     * @return a {@code List} of stack trace element represented in
-     *         {@code String}s
+     * @return a {@code Deque} of stack trace element represented as location
+     *         ID's; {@code -1} represents missing stack trace elements
      */
-    public List<String> getStacktraceAt(Event event) {
+    public Deque<Integer> getStacktraceAt(Event event) {
         long tid = event.getTID();
-        List<String> stacktrace = Lists.newArrayList();
-        if (event.getGID() >= rawEvents.get(0).getGID()) {
+        long gid = event.getGID();
+        Deque<Integer> stacktrace = new ArrayDeque<>();
+        if (gid >= baseGID) {
             /* event is in the current window; reassemble its stack trace */
-            for (int locId : threadIdToInitThreadStatus.get(tid).stacktrace) {
-                stacktrace.add(metadata.getLocationSig(locId));
-            }
-            for (MetaEvent e : threadIdToCallStackEvents.getOrDefault(tid,
-                    Collections.<MetaEvent> emptyList())) {
-                if (e.getGID() >= event.getGID()) {
-                    break;
-                }
-
-                if (e.getType() == EventType.INVOKE_METHOD) {
-                    stacktrace.add(metadata.getLocationSig(e.getLocId()));
-                } else {
-                    stacktrace.remove(stacktrace.size() - 1);
+            tidToThreadState.getOrDefault(tid, state.getThreadState(tid)).getStacktrace()
+                    .forEach(stacktrace::addFirst);
+            for (int i = 0; i < numOfEvents; i++) {
+                Event e = events[i];
+                if (e.getGID() >= gid) break;
+                if (e.getTID() == tid) {
+                    if (e.getType() == EventType.INVOKE_METHOD) {
+                        stacktrace.addFirst(e.getLocId());
+                    } else if (e.getType() == EventType.FINISH_METHOD) {
+                        stacktrace.removeFirst();
+                    }
                 }
             }
-            stacktrace.add(metadata.getLocationSig(event.getLocId()));
+            stacktrace.addFirst(event.getLocId());
         } else {
             /* event is from previous windows */
-            if (initHeldLockToStacktrace.containsKey(event)) {
-                stacktrace.addAll(initHeldLockToStacktrace.get(event));
-            } else {
-                stacktrace.add(metadata.getLocationSig(event.getLocId()));
-                stacktrace.add("... stack trace not available ...");
-            }
+            stacktrace.add(event.getLocId());
+            stacktrace.add(-1);
         }
         return stacktrace;
     }
 
-    public List<LockObject> getHeldLocksAt(MemoryAccessEvent memAcc) {
-        long tid = memAcc.getTID();
-        Map<Long, Deque<SyncEvent>> map = Maps.newHashMap();
-        for (Map.Entry<Long, List<SyncEvent>> entry : threadIdToInitThreadStatus.get(tid).lockStatus
-                .entrySet()) {
-            map.put(entry.getKey(), new ArrayDeque<>(entry.getValue()));
-        }
-        for (Event e : getThreadEvents(tid)) {
-            if (e.getGID() >= memAcc.getGID()) {
-                break;
-            }
-
-            EventType type = e.getType();
-            if (EventType.isLock(type)) {
-                long lockId = ((SyncEvent) e).getSyncObject();
-                map.putIfAbsent(lockId, new ArrayDeque<SyncEvent>());
-                map.get(lockId).add((SyncEvent) e);
-            } else if (EventType.isUnlock(type)) {
-                long lockId = ((SyncEvent) e).getSyncObject();
-                SyncEvent lock = map.get(lockId).removeLast();
-                assert lock.getTID() == tid && lock.getSyncObject() == lockId;
+    /**
+     * Returns the locks held by the owner thread when a given {@code Event} occurs.
+     */
+    public List<Event> getHeldLocksAt(Event event) {
+        long tid = event.getTID();
+        Map<Long, LockState> lockIdToLockState = tidToThreadState
+                .getOrDefault(tid, state.getThreadState(tid)).getLockStates().stream()
+                .collect(Collectors.toMap(ls -> ls.lock().getSyncObject(), LockState::copy));
+        for (Event e : getEvents(tid)) {
+            if (e.getGID() >= event.getGID()) break;
+            if (e.isLock()) {
+                lockIdToLockState.computeIfAbsent(e.getSyncObject(), p -> new LockState())
+                        .acquire(e);
+            } else if (e.isUnlock()) {
+                lockIdToLockState.get(e.getSyncObject()).release();
             }
         }
 
-        List<LockObject> lockObjects = Lists.newArrayList();
-        for (Deque<SyncEvent> deque : map.values()) {
-            if (!deque.isEmpty()) {
-                lockObjects.add(LockObject.create(deque.peek()));
-            }
-        }
-        Collections.sort(lockObjects, new Comparator<LockObject>() {
-            @Override
-            public int compare(LockObject o1, LockObject o2) {
-                return Long.compare(o1.getLockEvent().getGID(), o2.getLockEvent().getGID());
-            }
-        });
-        return lockObjects;
-    }
-
-    public SyncEvent getStartEventOf(long tid) {
-        return threadIdToInitThreadStatus.get(tid).startEvent;
+        List<Event> lockEvents = lockIdToLockState.values().stream()
+                .filter(lockState -> lockState.level() > 0)
+                .map(LockState::lock).collect(Collectors.toList());
+        Collections.sort(lockEvents, (e1, e2) -> e1.compareTo(e2));
+        return lockEvents;
     }
 
     /**
-     * Gets control-flow dependent events of a given {@code MemoryAccessEvent}.
-     * Without any knowledge about the control flow of the program, all read
-     * events that happen-before the given event have to be included
-     * conservatively.
+     * Gets control-flow dependent events of a given {@code Event}. Without any
+     * knowledge about the control flow of the program, all read events that
+     * happen-before the given event have to be included conservatively.
      */
-    public List<ReadEvent> getCtrlFlowDependentEvents(MemoryAccessEvent memAccEvent) {
-        List<ReadEvent> readEvents = new ArrayList<>();
-        for (Event e : getThreadEvents(memAccEvent.getTID())) {
-            if (e.getGID() >= memAccEvent.getGID()) {
-                break;
-            }
-
-            if (e instanceof ReadEvent) {
-                readEvents.add((ReadEvent) e);
+    public List<Event> getCtrlFlowDependentEvents(Event event) {
+        // TODO(YilongL): optimize this!
+        List<Event> readEvents = new ArrayList<>();
+        for (Event e : getEvents(event.getTID())) {
+            if (e.getGID() >= event.getGID()) break;
+            if (e.isRead()) {
+                readEvents.add(e);
             }
         }
 
         return readEvents;
     }
 
-    public void addRawEvent(Event event) {
-//        System.err.println(event + " at " + metadata.getLocationSig(event.getLocId()));
-        rawEventsBuilder.add(event);
-        updateTraceState(event);
-
-        if (event instanceof MemoryAccessEvent) {
-            MemoryAccessEvent memAcc = (MemoryAccessEvent) event;
-            MemoryAddr addr = memAcc.getAddr();
-            getOrInitEmptySet(event instanceof ReadEvent ?
-                    addrToReadThreads : addrToWriteThreads, addr).add(event.getTID());
-            if (crntState.isInsideClassInitializer(event.getTID())) {
-                clinitMemAccEvents.add(memAcc);
-            }
-        }
-    }
-
-    private void updateTraceState(Event event) {
-        long tid = event.getTID();
-        if (!threadIdToInitThreadStatus.containsKey(tid)) {
-            ThreadStatus initThreadInfo = getCurrentThreadStatus(tid);
-            threadIdToInitThreadStatus.putIfAbsent(tid, initThreadInfo);
-        }
-
-        if (event instanceof MemoryAccessEvent) {
-            MemoryAccessEvent memAcc = (MemoryAccessEvent) event;
-            MemoryAddr addr = memAcc.getAddr();
-            long value = memAcc.getValue();
-            long crntVal = crntState.getValueAt(addr);
-            addrToInitValue.putIfAbsent(addr, crntVal);
-            if (event instanceof ReadEvent) {
-                if (value != Constants._0X_DEADBEEFL && value != crntVal) {
-                    if (Configuration.debug) {
-                        System.err.printf(
-                            String.format("[Warning] logged trace not sequential consistent:%n"
-                                    + "  event %s reads a different value than the currently stored value %s%n"
-                                    + "    at %s%n",
-                                    memAcc, crntVal, metadata.getLocationSig(memAcc.getLocId())));
-                    }
-                    crntState.writeValueAt(addr, crntVal);
-                    unsafeMemoryAddresses.add(addr);
-                }
-            } else {
-                crntState.writeValueAt(addr, memAcc.getValue());
-            }
-        } else if (event.getType() == EventType.START) {
-            crntState.onThreadStart((SyncEvent) event);
-        } else if (EventType.isLock(event.getType()) || EventType.isUnlock(event.getType())) {
-            SyncEvent syncEvent = (SyncEvent) event;
-            long lockId = syncEvent.getSyncObject();
-            if (EventType.isLock(event.getType())) {
-                crntState.acquireLock(event);
-                if (crntState.getLockCount(tid, lockId) == 1) {
-                    outermostLockingEvents.add(syncEvent);
-                }
-            } else {
-                crntState.releaseLock(event);
-                if (crntState.getLockCount(tid, lockId) == 0) {
-                    outermostLockingEvents.add(syncEvent);
-                }
-            }
-        } else if (event instanceof MetaEvent) {
-            EventType eventType = event.getType();
-            if (eventType == EventType.CLINIT_ENTER) {
-                crntState.incClinitDepth(tid);
-            } else if (eventType == EventType.CLINIT_EXIT) {
-                crntState.decClinitDepth(tid);
-            } else if (eventType == EventType.INVOKE_METHOD) {
-                crntState.invokeMethod(event);
-                getOrInitEmptyList(threadIdToCallStackEvents, tid).add((MetaEvent) event);
-            } else if (eventType == EventType.FINISH_METHOD) {
-                crntState.finishMethod(event);
-                getOrInitEmptyList(threadIdToCallStackEvents, tid).add((MetaEvent) event);
-            } else {
-                assert false : "unreachable";
-            }
-        }
-    }
-
-    private ThreadStatus getCurrentThreadStatus(long tid) {
-        return new ThreadStatus(crntState.getStacktraceSnapshot(tid),
-                crntState.getThreadStartEvent(tid), crntState.getLockStatusSnapshot(tid));
-    }
-
-    /**
-     * add a new filtered event to the trace in the order of its appearance
-     *
-     * @param event
-     */
-    private void addEvent(Event event) {
-//        System.err.println(event + " at " + metadata.getLocationSig(event.getLocId()));
-        long tid = event.getTID();
-        threadIds.add(tid);
-
-        allEvents.add(event);
-        getOrInitEmptyList(threadIdToEvents, tid).add(event);
-        if (event instanceof MemoryAccessEvent) {
-            MemoryAccessEvent memAcc = (MemoryAccessEvent) event;
-            MemoryAddr addr = memAcc.getAddr();
-
-            getOrInitEmptyList(memAccessEventsTbl.row(addr), tid).add(memAcc);
-
-            if (event instanceof ReadEvent) {
-                getOrInitEmptyList(addrToReadEvents, addr).add((ReadEvent) event);
-            } else {
-                getOrInitEmptyList(addrToWriteEvents, addr).add((WriteEvent) event);
-            }
-        } else if (event instanceof SyncEvent) {
-            SyncEvent syncEvent = (SyncEvent) event;
-
-            Map<Long, List<SyncEvent>> eventsMap = null;
-            switch (syncEvent.getType()) {
-            case START:
-            case JOIN:
-                eventsMap = threadIdToStartJoinEvents;
-                break;
-            case WRITE_LOCK:
-            case WRITE_UNLOCK:
-            case READ_LOCK:
-            case READ_UNLOCK:
-            case WAIT_REL:
-            case WAIT_ACQ:
-                eventsMap = lockIdToSyncEvents;
-                break;
-            default:
-                assert false : "unexpected event: " + syncEvent;
-            }
-
-            getOrInitEmptyList(eventsMap, syncEvent.getSyncObject()).add(syncEvent);
-        } else {
-            assert false : "unreachable";
-        }
-    }
-
-    /**
-     * Once trace is completely loaded, remove local data accesses and process
-     * the remaining trace.
-     */
-    public void finishedLoading() {
-        rawEvents = rawEventsBuilder.build();
-        crntState.finishLoading();
-
-        /* compute memory addresses that are accessed by more than one thread
-         * and with at least one write access */
-        for (MemoryAddr addr : Iterables.concat(addrToReadThreads.keySet(),
-                addrToWriteThreads.keySet())) {
-            Set<Long> wrtThrdIds = addrToWriteThreads.get(addr);
-            if (wrtThrdIds != null && !wrtThrdIds.isEmpty()) {
-                if (wrtThrdIds.size() > 1) {
-                    sharedMemAddr.add(addr);
-                } else {
-                    Set<Long> readThrdIds = addrToReadThreads.get(addr);
-                    if (readThrdIds != null && Sets.union(wrtThrdIds, readThrdIds).size() > 1) {
-                        sharedMemAddr.add(addr);
-                    }
-                }
-            }
-        }
-
-        List<Event> reducedEvents = new ArrayList<>();
-        for (Event event : rawEvents) {
-            if (event instanceof MemoryAccessEvent) {
-                MemoryAddr addr = ((MemoryAccessEvent) event).getAddr();
-                if (sharedMemAddr.contains(addr)) {
-                    reducedEvents.add(event);
-                }
-            } else if (EventType.isLock(event.getType()) || EventType.isUnlock(event.getType())) {
-                if (outermostLockingEvents.contains(event)) {
-                    reducedEvents.add(event);
-                }
-            } else if (!(event instanceof MetaEvent)) {
-                reducedEvents.add(event);
-            }
-        }
-
-        /* remove complete yet empty lock regions */
-        Table<Long, Long, Event> lockEventTbl = HashBasedTable.create();
-        Set<Event> criticalLockingEvents = new HashSet<>();
-        for (Event event : reducedEvents) {
+    private void processEvents() {
+        /// PHASE 1
+        Map<Long, Map<Event, Event>> tidToLockPairs = Maps.newHashMap();
+        boolean hasThreadInsideClinit = state.hasThreadInsideClinit();
+        for (int i = 0; i < numOfEvents; i++) {
+            Event event = events[i];
             long tid = event.getTID();
-            Map<Long, Event> lockStatus = lockEventTbl.row(tid);
+            if (hasThreadInsideClinit) {
+                if (state.isInsideClassInitializer(tid)) {
+                    clinitEvents.add(event);
+                }
+            }
 
-            if (event.isLockEvent()) {
-                long lockId = ((SyncEvent) event).getSyncObject();
-                Event prevLock = lockStatus.put(lockId, event);
-                assert prevLock == null : "Unexpected unmatched lock event: " + prevLock;
-            } else if (event.isUnlockEvent()) {
-                long lockId = ((SyncEvent) event).getSyncObject();
-                Event lock = lockStatus.remove(lockId);
-                if (lock == null || criticalLockingEvents.contains(lock)) {
-                    criticalLockingEvents.add(event);
+            if (event.isReadOrWrite()) {
+                /* update memory address state */
+                MemoryAddrState st = addrToState.computeIfAbsent(event.getAddr(),
+                        addr -> new MemoryAddrState(state.getValueAt(addr)));
+                if (event.isRead()) {
+                    st.readBy(tid);
+                } else {
+                    st.writtenBy(tid, i);
+                }
+            } else if (event.isSyncEvent()) {
+                if (event.isLock()) {
+                    tidToThreadState.computeIfAbsent(tid, state::getThreadStateSnapshot);
+                    event = event.copy();
+                    if (state.acquireLock(event).level() == 1) {
+                        tidToLockPairs.computeIfAbsent(tid, p -> new HashMap<>())
+                            .put(event, null);
+                    }
+                } else if (event.isUnlock()) {
+                    tidToThreadState.computeIfAbsent(tid, state::getThreadStateSnapshot);
+                    LockState st = state.releaseLock(event);
+                    if (st.level() == 0) {
+                        tidToLockPairs.computeIfAbsent(tid, p -> new HashMap<>())
+                            .put(st.lock(), event);
+                    }
+                }
+            } else if (event.isMetaEvent()) {
+                EventType type = event.getType();
+                if (type == EventType.INVOKE_METHOD || type == EventType.FINISH_METHOD) {
+                    tidToThreadState.computeIfAbsent(tid, state::getThreadStateSnapshot);
+                }
+                state.onMetaEvent(event);
+                if (type == EventType.CLINIT_ENTER) {
+                    hasThreadInsideClinit = true;
+                } else if (type == EventType.CLINIT_EXIT) {
+                    hasThreadInsideClinit = state.hasThreadInsideClinit();
                 }
             } else {
-                for (Event e : lockStatus.values()) {
-                    criticalLockingEvents.add(e);
+                throw new IllegalStateException();
+            }
+        }
+
+        /* update memory address value */
+        addrToState.forEach((addr, st) -> {
+            if (st.lastWrite >= 0) {
+                state.writeValueAt(addr, events[st.lastWrite].getValue());
+            }
+        });
+
+        /* compute shared memory addresses */
+        Set<MemoryAddr> sharedAddr = new HashSet<>();
+        addrToState.forEach((addr, state) -> {
+            if (state.isWriteShared()) {
+                sharedAddr.add(addr);
+            }
+        });
+
+        /// PHASE 2
+        if (!sharedAddr.isEmpty()) {
+            long baseGID = events[0].getGID();
+            boolean[] critical = new boolean[numOfEvents];
+            Map<Long, Map<Integer, Integer>> tidToOpenLockIndices = new HashMap<>();
+            tidToLockPairs.forEach((tid, pairs) -> {
+                Map<Integer, Integer> indices = new HashMap<>();
+                tidToOpenLockIndices.put(tid, indices);
+                pairs.forEach((l, r) -> {
+                    if (l.getGID() < baseGID) {
+                        indices.put(getEventOffset(l), r == null ? null : getEventOffset(r));
+                    }
+                });
+            });
+
+            for (int i = 0; i < numOfEvents; i++) {
+                Event event = events[i];
+                long tid = event.getTID();
+                if (event.isReadOrWrite()) {
+                    critical[i] = sharedAddr.contains(event.getAddr());
+                } else if (event.isSyncEvent()) {
+                    if (event.isLock()) {
+                        if (tidToLockPairs.get(tid).containsKey(event)) {
+                            Event unlock = tidToLockPairs.get(tid).get(event);
+                            tidToOpenLockIndices.get(tid).put(i,
+                                    unlock == null ? null : getEventOffset(unlock));
+                        }
+                    } else if (event.isUnlock()) {
+                        tidToOpenLockIndices.get(tid).values().remove(i);
+                    } else {
+                        critical[i] = true;
+                    }
+                } else {
+                    // MetaEvents are not critical
+                }
+
+                if (critical[i]) {
+                    Map<Integer, Integer> indices = tidToOpenLockIndices.get(tid);
+                    if (indices != null) {
+                        indices.forEach((l, r) -> {
+                            Event lock, unlock;
+                            if (l >= 0) {
+                                critical[l] = true;
+                                lock = events[l];
+                            } else {
+                                lock = null;
+                            }
+                            if (r != null) {
+                                critical[r] = true;
+                                unlock = events[r];
+                            } else {
+                                unlock = null;
+                            }
+                            lockIdToLockRegions.computeIfAbsent(
+                                    lock != null ? lock.getLockId() : unlock.getLockId(),
+                                    p -> new ArrayList<>()).add(new LockRegion(lock, unlock));
+                        });
+                        indices.clear();
+                    }
+                }
+            }
+
+            /* finally commit all critical events into this window */
+            for (int i = 0; i < numOfEvents; i++) {
+                if (critical[i]) {
+                    addCriticalEvent(events[i]);
                 }
             }
         }
-        criticalLockingEvents.addAll(lockEventTbl.values());
-        for (Event event : reducedEvents) {
-            if ((event.isLockEvent() || event.isUnlockEvent())
-                    && !criticalLockingEvents.contains(event)) {
-                continue;
+    }
+
+    private int getEventOffset(Event event) {
+        return (int) (event.getGID() - baseGID);
+    }
+
+    private static class MemoryAddrState {
+        int lastWrite = -1;
+        final long initVal;
+        long reader1, reader2;
+        long writer1, writer2;
+
+        MemoryAddrState(long value) {
+            initVal = value;
+        }
+
+        void readBy(long tid) {
+            if (reader1 == 0) {
+                reader1 = tid;
+            } else if (reader1 != tid && reader2 == 0) {
+                reader2 = tid;
             }
-            addEvent(event);
+        }
+
+        void writtenBy(long tid, int idx) {
+            lastWrite = idx;
+            if (writer1 == 0) {
+                writer1 = tid;
+            } else if (writer1 != tid && writer2 == 0) {
+                writer2 = tid;
+            }
+        }
+
+        boolean isWriteShared() {
+            return writer2 != 0 || writer1 != 0
+                    && (reader1 != 0 && reader1 != writer1 || reader2 != 0 && reader2 != writer1);
         }
     }
 
-    public int getSize() {
-        return rawEvents.size();
-    }
+    private static final Function<Object, ? extends List<Event>> NEW_EVENT_LIST = p -> new ArrayList<>();
 
-    /**
-     * Checks if a memory address is volatile.
-     *
-     * @param addr
-     *            the memory address
-     * @return {@code true} if the address is {@code volatile}; otherwise,
-     *         {@code false}
-     */
-    public boolean isVolatileField(MemoryAddr addr) {
-        int fieldId = -addr.fieldIdOrArrayIndex();
-        return fieldId > 0 && metadata.isVolatile(fieldId);
-    }
-
-    static <K,V> List<V> getOrInitEmptyList(Map<K, List<V>> map, K key) {
-        List<V> value = map.get(key);
-        if (value == null) {
-            value = Lists.newArrayList();
-        }
-        map.put(key, value);
-        return value;
-    }
-
-    private static <K,V> Set<V> getOrInitEmptySet(Map<K, Set<V>> map, K key) {
-        Set<V> value = map.get(key);
-        if (value == null) {
-            value = Sets.newHashSet();
-        }
-        map.put(key, value);
-        return value;
-    }
-
-    private static class ThreadStatus {
-
-        private final List<Integer> stacktrace;
-        private final SyncEvent startEvent;
-        private final Map<Long, List<SyncEvent>> lockStatus;
-
-        private ThreadStatus(List<Integer> stacktrace, SyncEvent startEvent,
-                Map<Long, List<SyncEvent>> lockStatus) {
-            this.stacktrace = stacktrace;
-            this.startEvent = startEvent;
-            this.lockStatus = lockStatus;
+    private void addCriticalEvent(Event event) {
+//        System.err.println(event + " at " + metadata.getLocationSig(event.getLocId()));
+        long tid = event.getTID();
+        tidToEvents.computeIfAbsent(tid, NEW_EVENT_LIST).add(event);
+        if (event.isReadOrWrite()) {
+            MemoryAddr addr = event.getAddr();
+            memAccessEventsTbl.row(addr).computeIfAbsent(tid, NEW_EVENT_LIST).add(event);
+            if (event.isWrite()) {
+                addrToWriteEvents.computeIfAbsent(addr, NEW_EVENT_LIST).add(event);
+            }
         }
     }
 
